PDF viewer added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -307,7 +307,7 @@
                                               </select>
                                         </div>
                                         <div class="col d-flex align-items-end">
-                                            <button  class="btn btn-primary" >Review agreement</button>
+                                            <button  class="btn btn-primary" routerLink="/document">Review agreement</button>
                                         </div>
                                     </div>
                                   </div>
