--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -45,8 +45,8 @@
               <div class="input-group-prepend" dropdown>
 
 
-                  <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-secondary dropdown-toggle border-lightgrey lg-rounded"
-                          aria-controls="dropdown-basic" style="font-weight: normal;  border-right-width: 0;">
+                  <button id="button-basic" dropdownToggle type="button" class="btn dropdown-toggle border-lightgrey lg-rounded topsearch-dd"
+                          aria-controls="dropdown-basic">
                           {{searchFilter}}<span class="caret"></span>
                   </button>
                   <div id="dropdown-basic" *dropdownMenu class="dropdown-menu"
