--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -245,13 +245,13 @@
                         <div class="col-md-5 p-0">
                             <div class="card">
                               <div class="card-body">
-                                <div>
+                                <div class="fix-height">
                                   <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
                                   <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
                                   <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
                                </div>
 
-                                <div class="row mt-3">
+                                <div class="row">
                                   <div class="col">
                                       <label for="" class="custom-label dark-label">Government filing fee:</label>
                                       <input type="text" class="form-control icon-edit" value="$1030">
@@ -276,9 +276,10 @@
                             <div class="card-body">
 
                                 <div class="tab-btn-group">
-                                  <h5 class="heading-blue mb-4">Reassign</h5>
-                                  <p>In case you wish to reassign the members of attorney and/or paralegal, select from the list below.</p>
-
+                                  <div class="fix-height">
+                                    <h5 class="heading-blue mb-4">Reassign</h5>
+                                    <p>In case you wish to reassign the members of attorney and/or paralegal, select from the list below.</p>
+                                  </div>
                                   <div class="row">
                                       <div class="col">
                                           <label for="" class="custom-label">Attorney</label>
@@ -297,11 +298,13 @@
                         </div>
                         <div class="col-md-3 pr-0">
                           <div class="card">
-                              <div class="card-body  d-flex align-items-end">
+                              <div class="card-body">
 
                                   <div class="tab-btn-group w-100">
-                                    <p>Select Engagement Agreement<br> from the dropdown menu given below.</p>
-
+                                    <div class="fix-height">
+                                      <h5 class="heading-blue mb-4">&nbsp;</h5>
+                                      <p>Select Engagement Agreement<br> from the dropdown menu given below.</p>
+                                    </div>
                                     <div class="row">
                                         <div class="col pr-1">
                                             <label for="" class="custom-label">Agreement</label>
