PDF sidebar open by default

--- a/src/app/pdf/document/document.component.html
+++ b/src/app/pdf/document/document.component.html
@@ -1,11 +1,24 @@
 
  <ngx-extended-pdf-viewer
-     [src]="pdfSrc"
-     [height]="'95%'"
-     [useBrowserLocale]="true"
-     [textLayer]="true"
-     [showHandToolButton]="true"
-     [showToolbar]="false"
-     [showSidebarButton]="true"
+    [src]="pdfSrc"
+    [height]="'95%'"
+    [useBrowserLocale]="true"
+    [showToolbar]="true"
+    [showSidebarButton]="true"
+    [showFindButton]="false"
+    [showPagingButtons]="false"
+    [showZoomButtons]="false"
+    [showPresentationModeButton]="false"
+    [showOpenFileButton]="false"
+    [showPrintButton]="false"
+    [showDownloadButton]="false"
+    [showBookmarkButton]="false"
+    [showSecondaryToolbarButton]="true"
+    [showRotateButton]="false"
+    [showHandToolButton]="false"
+    [showScrollingButton]="false"
+    [showSpreadButton]="false"
+    [showPropertiesButton]="false"
+    [sidebarVisible]="true"
      >
 </ngx-extended-pdf-viewer>
