--- a/src/app/_shared/header/header.component.html
+++ b/src/app/_shared/header/header.component.html
@@ -8,6 +8,8 @@
 
       <div class="logo" >
         <!-- <span class="logo-text-self">SELF</span><span class="logo-text-pay">PAY</span> -->
+
+        <a routerLink="/" title="SELFPAY">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="111" height="38" viewBox="0 0 111 38">
           <defs>
             <filter id="Subtraction_1" x="91.834" y="21.331" width="7.079" height="4.823" filterUnits="userSpaceOnUse">
@@ -30,7 +32,7 @@
             </g>
           </g>
         </svg>
-
+      </a>
 
       </div>
     </div>
