--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -253,13 +253,18 @@
 
                                 <div class="row">
                                   <div class="col">
-                                      <label for="" class="custom-label dark-label">Government filing fee:</label>
+                                      <label for="" class="custom-label dark-label">Govt. Filing Fee:</label>
                                       <input type="text" class="form-control icon-edit" value="$1030">
                                   </div>
                                   <div class="col">
                                       <label for="" class="custom-label dark-label">Legal Fee:</label>
                                       <input type="text" class="form-control icon-edit" value="$100">
                                   </div>
+
+                                  <div class="col">
+                                    <label for="" class="custom-label dark-label">Administrative Fee:</label>
+                                    <input type="text" class="form-control icon-edit" value="$100">
+                                </div>
 
                                   <div class="col">
                                     <label for="" class="custom-label dark-label">Total:</label>
