--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -245,13 +245,27 @@
                         <div class="col-md-5 p-0">
                             <div class="card">
                               <div class="card-body">
-                                <div class="fix-height">
+                                <div class="">
                                   <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
+                                  <div class="my-3">
+                                    <div class="d-flex">
+                                      <div class="col-">
+                                        <label for="" class="custom-label dark-label">Case No.</label>
+                                        <input type="text" class="form-control icon-edit" style="max-width: 120px;" value="$100">
+                                      </div>
+                                      <div class="col- ml-2">
+                                        <label for="" class="custom-label dark-label">XYZ</label>
+                                        <input type="text" class="form-control icon-edit" style="max-width: 120px;" value="$100">
+                                      </div>
+                                    </div>
+
+                                  </div>
+
                                   <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
                                   <p class="pplushhead">Visa Beneficiary Dependent : <strong>Gina Torres</strong></p>
                                </div>
 
-                                <div class="row">
+                                <!-- <div class="row">
                                   <div class="col">
                                       <label for="" class="custom-label dark-label">Govt. Filing Fee:</label>
                                       <input type="text" class="form-control icon-edit" value="$1030">
@@ -270,7 +284,7 @@
                                     <label for="" class="custom-label dark-label">Total:</label>
                                     <p class="p-2">$1030</p>
                                 </div>
-                              </div>
+                              </div> -->
 
 
                             </div>
@@ -329,7 +343,7 @@
 
                                         </div>
                                         <div class="col d-flex align-items-end">
-                                            <button  class="btn btn-primary" routerLink="/document">Review agreement</button>
+                                            <button  class="btn btn-primary" (click)="reviewAgreement(reviewAgreementModal)">Review agreement</button>
                                         </div>
                                     </div>
                                   </div>
@@ -346,3 +360,42 @@
     </table>
 </div>
 </div>
+
+
+<ng-template #reviewAgreementModal>
+  <div class="modal-header">
+        <h6 class="modal-title pull-left">Review Agreement</h6>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+    <div class="form-group">
+        <label for="" class="custom-label dark-label">Govt. Filing Fee:</label>
+        <input type="text" class="form-control icon-edit" value="$1030">
+    </div>
+
+
+    <div class="form-group">
+        <label for="" class="custom-label dark-label">Legal Fee:</label>
+        <input type="text" class="form-control icon-edit" value="$100">
+    </div>
+
+
+    <div class="form-group">
+      <label for="" class="custom-label dark-label">Administrative Fee:</label>
+      <input type="text" class="form-control icon-edit" value="$100">
+  </div>
+
+
+    <div class="form-group d-flex">
+
+      <label for="" class="custom-label dark-label">Total:</label>
+      <p class="ml-1">$1030</p>
+  </div>
+</div>
+</div>
+</div>
+</ng-template>
