label updated and button added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
                                <div class="card-body">
                                    <h5 class="heading-blue mb-4"><span class="underline-high">H1B</span> Premium Processing</h5>
                                    <div class="my-3">
-                                    <label for="" class="custom-label dark-label">Case No.</label>
+                                    <label for="" class="custom-label dark-label">Case ID.</label>
                                     <input type="text" class="form-control icon-edit" style="max-width: 120px;" value="$100">
                                   </div>
                                    <p class="pplushhead">Visa Beneficiary: <strong>Rick Hoffman</strong></p>
@@ -250,11 +250,11 @@
                                   <div class="my-3">
                                     <div class="d-flex">
                                       <div class="col-">
-                                        <label for="" class="custom-label dark-label">Case No.</label>
+                                        <label for="" class="custom-label dark-label">Case ID.</label>
                                         <input type="text" class="form-control icon-edit" style="max-width: 120px;" value="$100">
                                       </div>
                                       <div class="col- ml-2">
-                                        <label for="" class="custom-label dark-label">XYZ</label>
+                                        <label for="" class="custom-label dark-label">Petition ID.</label>
                                         <input type="text" class="form-control icon-edit" style="max-width: 120px;" value="$100">
                                       </div>
                                     </div>
@@ -395,6 +395,10 @@
       <label for="" class="custom-label dark-label">Total:</label>
       <p class="ml-1">$1030</p>
   </div>
+
+  <div class="form-group">
+    <button type="button" class="btn btn-primary">Generate Agreement</button>
+    </div>
 </div>
 </div>
 </div>
